2014-09-23  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/62155
	* g++.dg/cpp0x/lambda/lambda-62155.C: New.

2014-09-22  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/62219
	* g++.dg/cpp0x/lambda/lambda-template14.C: New.

2014-09-22  Alan Lawrence  <alan.lawrence@arm.com>

	* gcc.dg/vect/vect-reduc-or_1.c: New test.
	* gcc.dg/vect/vect-reduc-or_2.c: Likewise.

2014-09-22  Alan Lawrence  <alan.lawrence@arm.com>

	* lib/target-supports.exp (check_effective_target_whole_vector_shift):
	New.

	* gcc.dg/vect/vect-reduc-mul_1.c: New test.
	* gcc.dg/vect/vect-reduc-mul_2.c: New test.

2014-09-22  Jakub Jelinek  <jakub@redhat.com>

	PR debug/63328
	* c-c++-common/gomp/pr63328.c: New test.

2014-09-22  Martin Liska  <mliska@suse.cz>

	PR lto/63270
	* g++.dg/lto/pr63270_0.C: New test.
	* g++.dg/lto/pr63270_1.C: New test.

2014-09-21  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.target/i386/avx-vzeroupper-16.c (dg-final): Remove check
	for call_value_rex64_ms_sysv.
	* gcc.target/i386/avx-vzeroupper-17.c (dg-final): Ditto.
	* gcc.target/i386/avx-vzeroupper-18.c (dg-final): Remove check
	for call_rex64_ms_sysv.

2014-09-20  Alessandro Fanfarillo  <fanfarillo.gcc@gmail.com>
	    Tobias Burnus  <burnus@net-b.de>

	* gfortran.dg/coarray_atomic_5.f90: New

2014-09-19  Jan Hubicka  <hubicka@ucw.cz>

	PR c++/61825
	* gcc.dg/tree-ssa/nonzero-1.c: Require error to be output.

2014-09-19  Andi Kleen  <ak@linux.intel.com>

	* gcc.dg/pg-override.c: Only run on x86 Linux.
	* gcc.dg/pg.c: Dito.
	* gcc.target/i386/fentry-override.c: Exclude for PIC.
	* gcc.target/i386/fentry.c: Dito.

2014-09-19  Markus Trippelsdorf  <markus@trippelsdorf.de>

	PR ipa/61998
	* g++.dg/warn/Wsuggest-final-2.C: New testcase.

2014-09-19  Joost VandeVondele  <vondele@gcc.gnu.org>

	PR fortran/63152
	* gfortran.dg/auto_char_dummy_array_1.f90: Fix undefined behavior.
	* gfortran.dg/pr63152.f90: New test.

2014-09-19  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/58328
	* g++.dg/cpp0x/nsdmi10.C: New.
